tests/ui/feature-gates/feature-gate-raw-dylib-import-name-type.stderr
error[E0658]: link kind `raw-dylib` is unstable on x86
  --> $DIR/feature-gate-raw-dylib-import-name-type.rs:3:29
   |
LL | #[link(name = "foo", kind = "raw-dylib", import_name_type = "decorated")]
   |                             ^^^^^^^^^^^
   |
   = note: see issue #58713 <https://github.com/crablang/crablang/issues/58713> for more information
   = help: add `#![feature(raw_dylib)]` to the crate attributes to enable

error[E0658]: import name type is unstable
  --> $DIR/feature-gate-raw-dylib-import-name-type.rs:3:61
   |
LL | #[link(name = "foo", kind = "raw-dylib", import_name_type = "decorated")]
   |                                                             ^^^^^^^^^^^
   |
   = note: see issue #58713 <https://github.com/crablang/crablang/issues/58713> for more information
   = help: add `#![feature(raw_dylib)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `crablangc --explain E0658`.
